# knitvis

./: .gitignore  README.md  pyproject.toml
examples/Basic usage/: basic.py
examples/basic/: basic.py
knitvis/: chart.py  double_knitting.py  palette.py
knitvis/gui/: main.py  settings_manager.py
knitvis/gui/controllers/: base_controller.py  chart_controller.py  fabric_controller.py
knitvis/gui/dialogs/: __init__.py  color_palette_dialog.py  preferences_dialog.py  settings_dialog.py  stitch_dialog.py
knitvis/gui/views/: base_view.py  chart_view.py  fabric_view.py
knitvis/gui/widgets/: chart_navigation.py  edit_settings_menu.py
tests/: conftest.py  test_chart_visualization.py  test_double_knitting.py  test_knitting_chart.py  test_knitting_palette.py
tests/gui/: __init__.py  conftest.py  test_chart_navigation.py  test_chart_view.py  test_color_palette_dialog.py  test_fabric_view.py  test_settings.py  test_stitch_dialog.py
tests/gui/KnitVisTest/: KnitVisTest.conf
